--- a/labofront/package.json
+++ b/labofront/package.json
@@ -2,7 +2,7 @@
   "name": "consumofront",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "productName": "Laboratorio",
   "author": "adimerpaul <adimer101@gmail.com>",
   "private": true,
   "scripts": {
