--- a/labofront/package.json
+++ b/labofront/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.5",
     "quasar": "^2.0.0",
+    "vue-chartjs": "^3.5.1",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
