--- a/labofront/package.json
+++ b/labofront/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
     "quasar": "^2.0.0",
+    "vue-chartjs": "^4.0.5",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
