--- a/labofront/package.json
+++ b/labofront/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.5",
+    "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "quasar": "^2.0.0",
     "vue-chartjs": "^4.0.5",
