--- a/labofront/package.json
+++ b/labofront/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.6.0",
     "jspdf": "^2.5.1",
     "moment": "^2.29.3",
+    "printd": "^1.6.0",
     "quasar": "^2.0.0",
     "vue-chartjs": "^4.0.5",
     "vuex": "^4.0.1"
